[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cohort-validator"
version = "1.0.0"
description = "Python interface to OHDSI CIRCE cohort validation library"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Numan Burak Fidan", email = "numanburak_fidan@epam.com"}
]
maintainers = [
    {name = "Numan Burak Fidan", email = "numanburak_fidan@epam.com"}
]
keywords = ["cohort", "validation", "ohdsi", "circe", "healthcare", "phenotype"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "jpype1>=1.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.scripts]
cohort-validate = "cohort_validator.cli:main"

[project.urls]
Homepage = "https://github.com/OdyOSG/ohdsi-cohort-validator"
Repository = "https://github.com/OdyOSG/ohdsi-cohort-validator"
Documentation = "https://github.com/OdyOSG/ohdsi-cohort-validator#readme"
"Bug Tracker" = "https://github.com/OdyOSG/ohdsi-cohort-validator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cohort_validator*"]

[tool.setuptools.package-data]
cohort_validator = ["*.jar", "*.json"]
"*" = ["circe-be/**/*"]

[tool.pytest.ini_options]
testpaths = ["cohort_validator/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | circe-be
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["cohort_validator"]
